--- a/index.html
+++ b/index.html
@@ -17,23 +17,18 @@
 <br/>	  
 
 <center >
-<section id="boxes1" class="center-fit">
+<section href="./index.html" id="boxes1" class="center-fit">
 	    
-      <div class="container">
-        <div class="box1">
-          <img src="./img/leisson.png" style="width:75%; padding-bottom:10%; padding-right:5%;">
+      <div href="./index.html" class="container">
+        <div href="./index.html" class="box1">
+		<a href="./index.html">
+		</a>
+          <img href="./index.html" src="./img/leisson.png" style="width:75%; padding-bottom:10%; padding-right:5%;">
 
         </div>
 	       </div>
-    </section>
- <section id="showcase">
-      <div class="container1">
-      </div>
-	  <div id='cssmenu'>
 
-
-    </section>
-<embed src="./port.html" style="min-width:61%;max-width: 100%;min-height:420px">
+<embed src="./port.html" style="min-width:61%;max-width: 100%;min-height:420px" style="padding-bottom:5%;">
 </center>
 
 
@@ -47,9 +42,9 @@
     </section>
 	    </center>
   <body>
-<div class="container3">
-  <img src="./img/tausta.png" style="width:70%; height:220px; padding-right:5%">
-  <div class="centered">
+<div class="container3" style="padding-top:5%;">
+
+  <div class="centered" style="background:white; ">
   <p>Is&#228;nn&#246;innin peruspilareita ovat ammattitaito, asiakasl&#228;ht&#246;isyys,      vastuullisuus ja luotettavuus. 
 Yksityinen elinkeinonharjoittaja Y-TUNNUS 1339416-8
 IAT, huoltomestarin tutkinto</p>
