--- a/info.html
+++ b/info.html
@@ -47,9 +47,9 @@
     <div class="column">
     </div>
     <div class="column">
-      <form action="/action_page.php"
+      <!-- <form action="/action_page.php"	-->
         <label for="subject"></label>
-        <textarea id="subject" name="subject" placeholder="Kirjoita jotain..." style="height:170px"></textarea>
+        <textarea id="subject" name="subject" placeholder="Kirjoita jotain... (Tämä ei lähetä vielä minnekään)" style="height:170px"></textarea>
        <div>
 	   </div>
 	   <input type="submit" value="lähetä">
@@ -69,7 +69,5 @@
 		<p> </p>
 			<p> </p>
 				<p> </p>
-	<div class="terms">
-</div>
   </body>
 </html>
