--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ IAT, huoltomestarin tutkinto</p>
 
 	<div class="boxr">
 		<a href="https://www.youtube.com/watch?v=oi9BIhjk5Jw">
-          <img src="./img/tenor.gif" style=" width:5%;">
+          <img src="./img/potrait.png" style=" width:5%;">
 		  </a>
         </div>
     </footer>
