--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body>
 <div class="container3" style="padding-top:5%;">
 
-  <div class="centered" style="background:white; ">
+  <div class="centered" style="background:white; width:80% ">
   <p>Is&#228;nn&#246;innin peruspilareita ovat ammattitaito, asiakasl&#228;ht&#246;isyys,      vastuullisuus ja luotettavuus. 
 Yksityinen elinkeinonharjoittaja Y-TUNNUS 1339416-8
 IAT, huoltomestarin tutkinto</p>
@@ -62,16 +62,12 @@ IAT, huoltomestarin tutkinto</p>
     <p style="font: 20px/2;">Puhelin: 0500570249</p>
 	<a href="mailto:niemi.lasse01@gmail.com">Email: niemi.lasse01@gmail.com</a>
 
-	<div class="boxr">
-		<a href="https://www.youtube.com/watch?v=oi9BIhjk5Jw">
+	<div class="boxr">	
           <img src="./img/potrait.png" style=" width:5%;">
-		  </a>
         </div>
     </footer>
 		<p> </p>
 			<p> </p>
 				<p> </p>
-	<div class="terms">
-</div>
   </body>
 </html>
