--- a/port.html
+++ b/port.html
@@ -31,10 +31,10 @@
 	    
       <div class="container">
         <div class="box">
-		<a href="./form.html">
+		<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__bIr2dxUNzE4WUtESVFYTEZCVTU1MTBUOUpZNFdNNC4u" target="external">
           <img src="./img/oikea.png">
 		  </a>
-          <h3>Tee tilaus</h3>
+          <h3>T&#228;yt&#228; tilauslomake</h3>
         </div>
 	      
         <div class="box">
