--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ IAT, huoltomestarin tutkinto</p>
 				<p> </p>
     <footer>
 	</br>
-    <p style="font: 20px/2;">Puhelin: 0500570249</p>
+    <a href="tel:0500570249"style="font: 20px/2;">Puhelin: 0500570249</a>
+	<br>
 	<a href="mailto:niemi.lasse01@gmail.com">Email: niemi.lasse01@gmail.com</a>
 
 	<div class="boxr">	
