--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ IAT, huoltomestarin tutkinto</p>
 				<p> </p>
     <footer>
 	</br>
+	<a>Lasse Niemi	</a>
+	</br>
     <a href="tel:0500570249"style="font: 20px/2;">Puhelin: 0500570249</a>
 	</br>
 	<a href="mailto:niemi.lasse01@gmail.com">Email: niemi.lasse01@gmail.com</a>
