--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	    
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <div class="container">  
@@ -9,12 +9,18 @@
     <link rel="stylesheet" href="./css/style.css">
 	<link rel="shortcut icon" href="./img/leisson.png" />
 	  	 <div id="clockbox"></div>
-
+	    <style type="text/css">
+		body{
+			background-image:url(img/wall.png);
+			background-size: cover;
+			background-attachment: fixed;
+		}
+		</style>
   </head>
-<br/>
-<br/>
-<br/>
-<br/>	  
+</br>
+</br>
+</br>
+</br>	  
 
 <center >
 <section href="./index.html" id="boxes1" class="center-fit">
@@ -28,7 +34,7 @@
         </div>
 	       </div>
 
-<embed src="./port.html" style="min-width:61%;max-width: 100%;min-height:420px" style="padding-bottom:5%;">
+<embed class="col-1" src="./port.html" style="min-width:61%;max-width: 100%; padding-bottom:5%;">
 </center>
 
 
