--- a/esittely.html
+++ b/esittely.html
@@ -36,16 +36,16 @@
 	      
 	       </div>
 	    
-    </section>
+
 	</br>
 </br>
 </br>
-<div class="container3" style="padding-left:50%;">
+<div class="container3" style="padding-left:50px; padding-top:22px:">
   <div class="centered" style="background:white; ">
   <p>T&#228;nne vaikka joku esittelyvideo</p>
 </div>
 		</div>	
-
+    </section>
 
 	          </div>
 	  <p> </p>
