--- a/esittely.html
+++ b/esittely.html
@@ -40,9 +40,11 @@
 	</br>
 </br>
 </br>
-<div class="container3" style="padding-left:50px; padding-top:22px:">
-  <div class="centered" style="background:white; ">
-  <p>T&#228;nne vaikka joku esittelyvideo</p>
+<div style="padding-left:30%; padding-top:22%:">
+  <div style="background:white; ">
+  <p><i>"Olen työskennellyt pitkään teknisenä ja taloudellisena isännöitsijänä. Eläkkeelle jäätyäni jatkan toimintaa yksityisenä yrittäjänä."</i> -Lasse</p>
+  
+  
 </div>
 		</div>	
     </section>
