--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 	       </div>
 
-<embed class="col-1" src="./port.html" style="min-width:61%;max-width: 100%; padding-bottom:5%;">
+<embed class="col-1" src="./port.html" style="min-width:66%;max-width: 100%;min-height: 100%; padding-bottom:5%;">
 </center>
 
 
