--- a/esittely.html
+++ b/esittely.html
@@ -27,7 +27,7 @@
 	    
       <div class="container">
         <div class="box">
-		<a href="./index.html" target="_blank">
+		<a href="./index.html">
           <img src="./img/vasen.png">
 		  </a>
           <h3>Takaisin</h3>
