--- a/esittely.html
+++ b/esittely.html
@@ -27,7 +27,7 @@
 	    
       <div class="container">
         <div class="box">
-		<a href="./index.html">
+		<a href="./port.html">
           <img src="./img/vasen.png">
 		  </a>
           <h3>Takaisin</h3>
@@ -43,7 +43,8 @@
 <div style="padding-left:30%; padding-top:22%:">
   <div style="background:white; ">
   <p><i>"Olen työskennellyt pitkään teknisenä ja taloudellisena isännöitsijänä. Eläkkeelle jäätyäni jatkan toimintaa yksityisenä yrittäjänä."</i> -Lasse</p>
-  <img src="./img/kukat.jpeg" style="width:75%; padding-bottom:10%; padding-right:5%;">
+  <img src="./img/kukat.jpeg" style="width:35%; padding-bottom:10%; padding-right:5%;">
+  <img src="./img/meri.png" style="width:35%; padding-bottom:10%; padding-right:5%;">
 </div>
 		</div>	
     </section>
