--- a/port.html
+++ b/port.html
@@ -44,10 +44,10 @@
           <h3>Esittely</h3>
         </div>
         <div class="box">
-		<a href="./info.html">
+		<a href="./info.html" target="_blank" rel="noopener noreferrer">
           <img src="./img/p.png">
 		  </a>
-          <h3>Palaute</h3>
+          <h3>Kuvia</h3>
         </div>
 	      
 	       </div>
