--- a/info.html
+++ b/info.html
@@ -24,7 +24,7 @@
   <body>
   </br>
   </br>
-  <a href=index.html style=font:30px/3.0; target="_blank" rel="noopener noreferrer">
+  <a href=index.html style=font:30px/3.0; target="_blank">
 Takaisin
 </a>
 </br>
