--- a/index.html
+++ b/index.html
@@ -48,10 +48,47 @@
     </section>
 	    </center>
   <body>
+</br>
+</br>
+</br>
+		</br>
+			</br>
+				</br>
+					</br>
+						</br>
+							</br>
+   <div class="slidershow middle">
+		
+      <div class="slides">
+        <input type="radio" name="r" id="r1" checked>
+        <input type="radio" name="r" id="r2">
+        <input type="radio" name="r" id="r3">
+        <input type="radio" name="r" id="r4">
+        <input type="radio" name="r" id="r5">
+        <div class="slide s1">
+          <img src="./img/yht3.png" alt="">
+        </div>
+        <div class="slide">
+          <img src="./img/yht2.png" alt="">
+        </div>
+        <div class="slide">
+          <img src="./img/yht1.png" alt="">
+        </div>
+      </div>
+
+      <div class="navigation">
+        <label for="r1" class="bar"></label>
+        <label for="r2" class="bar"></label>
+        <label for="r3" class="bar"></label>
+      </div>
+    </div>
   	</br>
 		</br>
 			</br>
 				</br>
+					</br>
+						</br>
+							</br>
 					</br>
 						</br>
 							</br>
