--- a/port.html
+++ b/port.html
@@ -47,7 +47,7 @@
 		<a href="./info.html" target="_blank" rel="noopener noreferrer">
           <img src="./img/p.png">
 		  </a>
-          <h3>Kuvia</h3>
+          <h3>Galleria</h3>
         </div>
 	      
 	       </div>
