--- a/light.html
+++ b/light.html
@@ -17,8 +17,8 @@
 		}
 		</style>
 		<script type="text/javascript">
-  if (screen.width <= 699) {
-    document.location = "./light.html";
+  if (screen.width >= 699) {
+    document.location = "./index.html";
   }
 </script>
   </head>
@@ -38,65 +38,32 @@
 
         </div>
 	       </div>
+</section>
 
-<embed class="col-1" src="./port.html" style="min-width:66%;max-width: 100%;min-height: 100%; padding-bottom:5%;">
 </center>
+<body>
 
+		<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__bIr2dxUNzE4WUtESVFYTEZCVTU1MTBUOUpZNFdNNC4u" target="external">
+          <img src="./img/oikea.png" style="height=50px; width=50px;">
+		  </a>
+          <h3>T&#228;yt&#228; tilauslomake</h3>
 
+	      
 
+		<a href="./esittely.html">
+          <img src="./img/kysymys.png" style="height=50px; width=50px;">
+		  </a>
+          <h3>Esittely</h3>
 
-	
-	       </div>
-	    <center>
-		
-		  </center>
-    </section>
-	    </center>
-  <body>
-</br>
-</br>
-</br>
-		</br>
-			</br>
-				</br>
-					</br>
-						</br>
-							</br>
-   <div class="slidershow middle">
-		
-      <div class="slides">
-        <input type="radio" name="r" id="r1" checked>
-        <input type="radio" name="r" id="r2">
-        <input type="radio" name="r" id="r3">
-        <input type="radio" name="r" id="r4">
-        <input type="radio" name="r" id="r5">
-        <div class="slide s1">
-          <img src="./img/yht3.png" alt="">
-        </div>
-        <div class="slide">
-          <img src="./img/yht2.png" alt="">
-        </div>
-        <div class="slide">
-          <img src="./img/yht1.png" alt="">
-        </div>
-      </div>
+		<a href="./info.html" target="_blank" rel="noopener noreferrer">
+          <img src="./img/p.png" style="height=50px; width=50px;">
+		  </a>
+          <h3>Galleria</h3>
 
-      <div class="navigation">
-        <label for="r1" class="bar"></label>
-        <label for="r2" class="bar"></label>
-        <label for="r3" class="bar"></label>
-      </div>
-    </div>
-  	</br>
-		</br>
-			</br>
-				</br>
-					</br>
-						</br>
-							</br>
-					</br>
-						</br>
-							</br>
+	      
+
+</body>
+
 <div class="container3" style="padding-top:5%;">
 
   <div class="centered" style="background:white; width:80% ">
