--- a/light.html
+++ b/light.html
@@ -17,7 +17,7 @@
 		}
 		</style>
 		<script type="text/javascript">
-  if (screen.width >= 699) {
+  if (screen.width >= 700) {
     document.location = "./index.html";
   }
 </script>
@@ -42,29 +42,30 @@
 
 </center>
 <body>
-
+   <div class="xyz">
+   
+   
 		<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__bIr2dxUNzE4WUtESVFYTEZCVTU1MTBUOUpZNFdNNC4u" target="external">
-          <img src="./img/oikea.png" style="height=50px; width=50px;">
+          <img src="./img/oikea.png" width="500" height="500">
 		  </a>
           <h3>T&#228;yt&#228; tilauslomake</h3>
 
 	      
-
 		<a href="./esittely.html">
-          <img src="./img/kysymys.png" style="height=50px; width=50px;">
+          <img src="./img/kysymys.png" width="500" height="500">
 		  </a>
           <h3>Esittely</h3>
 
 		<a href="./info.html" target="_blank" rel="noopener noreferrer">
-          <img src="./img/p.png" style="height=50px; width=50px;">
+          <img src="./img/p.png" width="500" height="500">
 		  </a>
           <h3>Galleria</h3>
-
+</div>
 	      
 
 </body>
-
-<div class="container3" style="padding-top:5%;">
+  <div class="center-fit">
+<div class="container3" style="padding-bottom:205%;">
 
   <div class="centered" style="background:white; width:80% ">
   <p>Is&#228;nn&#246;innin peruspilareita ovat ammattitaito, asiakasl&#228;ht&#246;isyys,      vastuullisuus ja luotettavuus. 
@@ -76,7 +77,6 @@ IAT, huoltomestarin tutkinto</p>
 			</br>
 				</br>
 		</div>		
-	          </div>
 	  <p> </p>
 			<p> </p>
 				<p> </p>
@@ -90,13 +90,10 @@ IAT, huoltomestarin tutkinto</p>
     <a href="tel:0500570249"style="font: 20px/2;">Puhelin: 0500570249</a>
 	</br>
 	<a href="mailto:niemi.lasse01@gmail.com">Email: niemi.lasse01@gmail.com</a>
-
-	<div class="boxr">	
-          <img src="./img/potrait.png" style=" width:20%;">
-        </div>
     </footer>
 		<p> </p>
 			<p> </p>
 				<p> </p>
+				</div>
   </body>
 </html>
