--- a/about.html
+++ b/about.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>Lasse Niemi</title>
     <style>
+
+      @media screen and (max-width: 600px) {
+        header, main, footer {
+        width: 100%;
+        margin: 0;
+        text-align: center;
+          }
+      }
+
       body {
         background-image: url(img/wall.png);
         background-size: cover;
