made nav buttons larger

--- a/about.html
+++ b/about.html
@@ -57,6 +57,10 @@
         object-fit: cover;
         margin: 5px;
       }
+      a.prev, a.next {
+        font-size: 36px;
+        padding: 10px 20px;
+      }
     </style>
   </head>
   <body>
