--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Lasse Niemi</title>
     <style>
 
-    @media screen and (max-width: 600px) {
-  header, main, footer {
-    width: 100%;
-    margin: 0;
-    text-align: center;
-  }
-}
+      @media screen and (max-width: 600px) {
+        header, main, footer {
+        width: 100%;
+        margin: 0;
+        text-align: center;
+          }
+      }
 
       body {
         background-image: url(img/wall.png);
@@ -45,7 +45,10 @@
         padding: 20px 0;
         color: white;
       }
-
+      a.prev, a.next {
+        font-size: 36px;
+        padding: 10px 20px;
+      }
     </style>
   </head>
   <body>
