--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         font-size: 36px;
         padding: 10px 20px;
       }
+      @media only screen and (max-width: 767px) {
+        body {
+        font-size: 1.5em;
+            }
+      }
     </style>
   </head>
   <body>
