--- a/about.html
+++ b/about.html
@@ -61,10 +61,15 @@
         font-size: 36px;
         padding: 10px 20px;
       }
-      @media only screen and (max-width: 1082px) {
+      @media only screen and (max-width: 767px) {
         body {
         font-size: 1.5em;
             }
+      }
+      .image-container img:hover {
+        transform: scale(1.25);
+        transition: transform 0.5s ease-in-out;
+        cursor: pointer;
       }
     </style>
   </head>
